# designPattern

./: .clang-format  .gitignore  CMakeLists.txt
client/: client.cpp
server/auth_server/: CMakeLists.txt
server/auth_server/frame/: frame_codequeue.c  frame_codequeue.h  frame_common.c  frame_common.h  frame_data.c  frame_data.h  frame_dictionary.c  frame_dictionary.h  frame_hash.c  frame_hash.h  frame_iniparser.c  frame_iniparser.h  frame_list.c  frame_list.h  frame_log.c  frame_log.h  frame_master.c  frame_master.h  frame_md5.c  frame_md5.h  frame_mysql.c  frame_mysql.h  frame_nethead.c  frame_nethead.h  frame_process.c  frame_process.h  frame_proctitle.c  frame_proctitle.h  frame_shm.c  frame_shm.h  frame_socket.c  frame_socket.h  frame_statis.c  frame_statis.h  frame_time.c  frame_time.h  frame_worker.c  frame_worker.h  frame_xtea.c  frame_xtea.h
server/auth_server/main/: authdb_auth.c  authdb_auth.h  authdb_cached.h  authdb_config.c  authdb_config.h  authdb_define.h  authdb_master.c  authdb_master.h  authdb_sqlexec.c  authdb_worker.c  authdb_worker.h  main.c
server/auth_server/module/: authdb_auth_renew.c  authdb_auth_req.c  authdb_make_sign.c  authdb_modules.c  authdb_modules.h  authdb_test.c
server/connector/: CMakeLists.txt  connect_config.cpp  connect_config.h  connector_define.h  connector_frame.cpp  connector_frame.h  connector_log.cpp  connector_log.h  connector_server.cpp
server/cross_server/: AppCommon.h  AppConfig.cpp  AppConfig.h  AppConfigZookeeper.cpp  AppConfigZookeeper.h  AppLog.h  AppPlatform.cpp.in  AppPlatform.h  AttackDefense.cpp  AttackDefense.h  AttackDefenseChallenge.cpp  AttackDefenseChallenge.h  CMakeLists.txt  CentreDataDefine.cpp  CentreDataDefine.h  CentreDataProcessor.cpp  CentreDataProcessor.h  FairPlayer.cpp  FairPlayer.h  GameControl.cpp  GameControl.h  HttpProcessor.cpp  HttpProcessor.h  MatchPlayer.cpp  MatchPlayer.h  MatchProcessor.cpp  MatchProcessor.h  Processor.cpp  Processor.h  ServerAlert.cpp  ServerAlert.h  ServerConfig.cpp  ServerConfig.h  ServerConfigParser.cpp  ServerConfigParser.h  ServerDataReport.cpp  ServerDataReport.h  TeamProcessor.cpp  TeamProcessor.h  cross_mysql_associate_container.hpp  (+21 more)
server/logic_server/: CMakeLists.txt  Makefile
server/logic_server/config/: CMakeLists.txt  logic_config.cpp  logic_config.h  logic_config_active.cpp  logic_config_active.h  logic_config_anti_addiction.cpp  logic_config_anti_addiction.h  logic_config_atlas.cpp  logic_config_atlas.h  logic_config_award.cpp  logic_config_award.h  logic_config_base.h  logic_config_base_define.h  logic_config_card.cpp  logic_config_card.h  logic_config_card_dialog.cpp  logic_config_card_dialog.h  logic_config_constellation.cpp  logic_config_constellation.h  logic_config_cross.cpp  logic_config_cross.h  logic_config_define.cpp  logic_config_define.h  logic_config_double_reward.cpp  logic_config_double_reward.h  logic_config_entire_war.cpp  logic_config_entire_war.h  logic_config_fight.cpp  logic_config_fight.h  logic_config_game.cpp  logic_config_game.h  logic_config_game_item.cpp  logic_config_game_item.h  logic_config_gashapon.cpp  logic_config_gashapon.h  logic_config_grow.cpp  logic_config_grow.h  logic_config_guild.cpp  logic_config_guild.h  logic_config_holiday_calendar.cpp  (+35 more)
server/logic_server/game/: CMakeLists.txt  logic_game_active.cpp  logic_game_active.h  logic_game_active_extra_processor.cpp  logic_game_active_extra_processor.h  logic_game_active_info.cpp  logic_game_active_info.h  logic_game_active_processor.cpp  logic_game_active_processor.h  logic_game_admin_processor.cpp  logic_game_admin_processor.h  logic_game_atlas_processor.cpp  logic_game_atlas_processor.h  logic_game_attribute.cpp  logic_game_attribute.h  logic_game_award_processor.cpp  logic_game_award_processor.h  logic_game_bill.cpp  logic_game_bill.h  logic_game_black_market_processor.cpp  logic_game_black_market_processor.h  logic_game_buff.cpp  logic_game_buff.h  logic_game_buy_commodity_operation_processor.cpp  logic_game_buy_commodity_operation_processor.h  logic_game_buy_resource_processor.cpp  logic_game_buy_resource_processor.h  logic_game_cache_card_operation.cpp  logic_game_cache_card_operation.h  logic_game_cache_common.cpp  logic_game_cache_common.h  logic_game_cache_level_operation.cpp  logic_game_cache_level_operation.h  logic_game_cache_table.h  logic_game_card_operation_processor.cpp  logic_game_card_operation_processor.h  logic_game_cmd_processor_factory.cpp  logic_game_cmd_processor_factory.h  logic_game_common_observer.cpp  logic_game_common_observer.h  (+109 more)
server/logic_server/link/: CMakeLists.txt  logic_link_common.cpp  logic_link_common.h  logic_link_define.h  logic_link_error.cpp  logic_link_error.h  logicso_link.cpp
server/logic_server/record/: CMakeLists.txt  logic_record_activity_task_table.cpp  logic_record_activity_task_table.h  logic_record_cross_fight_info_table.cpp  logic_record_cross_fight_info_table.h  logic_record_day_single_recharge_task_table.cpp  logic_record_day_single_recharge_task_table.h  logic_record_fashion_info_table.cpp  logic_record_fashion_info_table.h  logic_record_fight_report_table.cpp  logic_record_fight_report_table.h  logic_record_first_recharge_table.cpp  logic_record_first_recharge_table.h  logic_record_flower_lantern_table.cpp  logic_record_flower_lantern_table.h  logic_record_global_basic_table.cpp  (+145 more)
server/queue_server/: CMakeLists.txt  QueueAlertProcessor.cpp  QueueAlertProcessor.h  QueueAppCommon.h  QueueAppConfig.cpp  QueueAppConfig.h  QueueAppConfigZookeeper.cpp  QueueAppConfigZookeeper.h  QueueAppLog.h  QueueAppPlatform.cpp.in  QueueAppPlatform.h  QueueGameControl.cpp  QueueGameControl.h  QueueMsgProcessor.cpp  QueueMsgProcessor.h  QueueProcessor.cpp  QueueProcessor.h  QueueServerAlert.cpp  QueueServerAlert.h  QueueServerConfig.cpp  QueueServerConfig.h  QueueServerConfigParser.cpp  QueueServerConfigParser.h  main.cpp
tools/sql_alchemy/: CMakeLists.txt  Makefile  field_info.cpp  field_info.h  main.cpp  mysql_global_info.cpp  mysql_global_info.h  mysql_table_info.cpp  mysql_table_info.h  print_tool.cpp  print_tool.h
(+172 files in other folders)
