CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(INCLUDE_DIR  	
    ${CMAKE_CURRENT_SOURCE_DIR}/frame
    ${CMAKE_CURRENT_SOURCE_DIR}/main
    ${CMAKE_CURRENT_SOURCE_DIR}/module
    /usr/local/include
    /usr/local/mysql/include
    )

SET(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra -DDEBUG")
SET(CMAKE_C_FLAGS_RELEASE "-g -Wall -Wextra")

SET(LIB -ldl -lmysqlclient_r)

SET(EXECUTABLE_OUTPUT_PATH ${AUTH_OUTPUT_PATH})

SET(EXEC authdbsvrd)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/frame SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/main SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/module SRC)

INCLUDE_DIRECTORIES(${INCLUDE_DIR})

LINK_DIRECTORIES(${LIB_DIR})

ADD_EXECUTABLE(${EXEC} ${SRC})

TARGET_LINK_LIBRARIES(${EXEC} ${LIB})