CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(INCLUDE_DIR
    ${LOGIC_SOURCE_DIR}/config
    ${LOGIC_SOURCE_DIR}/link
    ${LOGIC_SOURCE_DIR}/record
    ${LOGIC_SOURCE_DIR}/game
)

INCLUDE_DIRECTORIES(${INCLUDE_DIR} ${COMMON_INCLUDE_DIR})

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC)

ADD_LIBRARY(logic_game ${SRC})


